[package]
name = "zeitig"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"

[dependencies]
log = "0.4.8"
rmp-serde = "0.14.3"
directories = "2.0.2"
im = { version = "15.0.0", features = ["serde"] }
time = { version = "0.2.15", features = ["serde"] }
serde = { version = "1.0.106", features = ["derive", "rc"] }
druid-enums = { git = "https://github.com/finnerale/druid-enums" }

[dependencies.druid]
version = "0.6"
features = ["im"]
