[package]
name = "zeitig"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"

[profile.release]
lto = "fat"

[dependencies]
log = "0.4.8"
rmp-serde = "0.14.3"
directories = "2.0.2"
im = "15.0.0"
time = "0.2.15"
rusqlite = { version = "0.24.0", features = ["time"] }
druid-enums = { git = "https://github.com/finnerale/druid-enums" }

[dependencies.druid]
version = "0.6"
git = "https://github.com/linebender/druid"
features = ["im"]
